updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ libraries
 roadmap
 *.yaml
 *.txt
+DSA/ProblemSolvingTechniques
+DSA/AdvancedDataStructure
+DSA/BasicDataStructure
+DSA/ComplexDataStructure
+DSA/GraphDataStructure
+DSA/TreeDataStructure
