--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@ libraries
 roadmap
 *.yaml
 *.txt
-DSA/ProblemSolvingTechniques
-DSA/AdvancedDataStructure
-DSA/BasicDataStructure
-DSA/ComplexDataStructure
-DSA/GraphDataStructure
-DSA/TreeDataStructure
+DSA/ProblemSolvingTechniques/*
+DSA/AdvancedDataStructure/*
+DSA/BasicDataStructure/*
+DSA/ComplexDataStructure/*
+DSA/GraphDataStructure/*
+DSA/TreeDataStructure/*
